*buldable server and client