@@ -20,11 +20,20 @@ jar {
 }
 
 def java_home = System.getenv('JAVA_HOME')
-task link(type: Exec) {
+task linkClient(type: Exec) {
     dependsOn 'clean'
     dependsOn 'jar'
 
     workingDir 'build'
 
     commandLine "/usr/lib/jvm/java-10-jdk/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}/usr/lib/jvm/java-10-jdk/jmods", '--add-modules', 'chat', '--launcher', 'chat=chat/chat.Client', '--output', 'dist', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages'
+}
+
+task linkServer(type: Exec) {
+    dependsOn 'clean'
+    dependsOn 'jar'
+
+    workingDir 'build'
+
+    commandLine "/usr/lib/jvm/java-10-jdk/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}/usr/lib/jvm/java-10-jdk/jmods", '--add-modules', 'chat', '--launcher', 'chat=chat/chat.Main', '--output', 'dist', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages'
 }
